# EcoSim

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  check_data.py  cognitive_pipeline.md  docker-compose.yml  pyrightconfig.json  start.ps1
.agents/workflows/: services.md
.claude/: settings.json
apps/core/: Dockerfile  pyproject.toml  run.py
apps/core/app/: __init__.py  config.py
apps/core/app/api/: campaign.py  dashboard.py  report.py
apps/core/app/models/: __init__.py  survey.py
apps/core/app/services/: __init__.py  agent_memory.py  campaign_parser.py  crisis_injector.py  graph_memory_updater.py  graph_query.py  graphiti_service.py  kg_retriever.py  profile_generator.py  report_agent.py  sim_config_generator.py  sim_manager.py  sim_runner.py
apps/core/app/utils/: llm_client.py
apps/core/scripts/: run_simulation.py
apps/core/tests/: test_campaign_pipeline.py  test_metadata_concurrent.py  test_profile_pipeline.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/hooks/: use-hydration.ts  use-sse.ts
apps/frontend/lib/: cognitive-traits.ts  mbti-modifiers.ts  utils.ts
apps/frontend/src/: App.vue  main.js
apps/frontend/stitch/: report.html  survey.html
apps/frontend/stores/: app-store.ts  ui-store.ts
apps/gateway/: Caddyfile  Dockerfile  gateway.py.bak
apps/simulation/: Dockerfile  agent_cognition.py  agent_memory_graph.py  agent_tracking_writer.py  build_progress.py  campaign_knowledge.py  crisis_engine.py  falkor_graph_searcher.py  ingest_campaign.py  interest_feed.py  kg_direct_writer.py  pyproject.toml  requirements-extra.txt  run_simulation.py  sentiment_analyzer.py  sim_agent_seeder.py  sim_evict_cron.py  sim_graph_clone.py  sim_master_mutator.py  sim_service.py  sim_zep_section_writer.py  test_crisis.py  zep_kg_writer.py  zep_ontology.py
apps/simulation/api/: graph.py  interview.py  report.py  simulation.py  survey.py
apps/simulation/scripts/: cleanup_legacy_post_comment.py
backend/: requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  campaign.py  graph.py  report.py  simulation.py  survey.py
backend/app/models/: campaign.py  ontology.py  simulation.py  survey.py
backend/app/services/: campaign_parser.py  crisis_injector.py  graph_builder.py  ontology_generator.py  parquet_reader.py  profile_generator.py  report_agent.py  sim_manager.py  survey_engine.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py
backend/test_output/: test_profiles.csv  test_profiles.json
backend/tests/: test_profile_pipeline.py
docs/: 01_overview.md  02_architecture.md  03_ingestion_kg.md  04_agent_generation.md  05_simulation_loop.md  06_post_simulation.md  06a_sentiment_analysis.md  06b_survey.md  06c_interview.md  06d_report.md  07_storage_and_paths.md  README.md  beginner_guide_agent_and_pipeline.md  oasis_core_architecture.md  reference.md  simulation_pipeline_analysis.md  simulation_uml_sequence.md
docs/write_report/: BK SHARK 2026 (1).docx
examples/campaigns/: highlands_summer_2026.md
frontend/: index.html  vite.config.js
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/assets/: main.css
frontend/src/components/: AppSidebar.vue  MemphisDeco.vue
frontend/src/router/: index.js
frontend/src/stores/: appStore.js
frontend/src/views/: GraphView.vue  InterviewView.vue  ReportView.vue  SimulationView.vue  SurveyView.vue
frontend/stitch/: campaign.html  dashboard.html  graph.html  simulation.html
gateway/: gateway.py  requirements.txt
libs/ecosim-common/: pyproject.toml
libs/ecosim-common/src/ecosim_common/: __init__.py  agent_interview.py  agent_schemas.py  atomic_io.py  config.py  file_parser.py  graphiti_factory.py  llm_client.py  metadata_index.py  metadata_migrations.py  name_pool.py  parquet_reader.py  path_resolver.py  sim_manifest.py  sim_zep_ontology.py  survey_question_gen.py  zep_client.py  zep_label_map.py
oasis/: Dockerfile  _check_db.py  _read_log.py  _test_decay.py  agent_cognition.py  analyze_sim.py  campaign_knowledge.py  debug_graph.py  falkor_graph_memory.py  ingest_campaign.py  interest_feed.py  run_simulation.py  run_test_to_file.py  sim_service.py  test_drift.py  test_full_integration.py  test_graphiti_direct.py  test_keybert.py  test_mbti.py  test_memory.py  test_reflection.py  verify_graph.py
oasis/api/: __init__.py  graph.py  interview.py  report.py  simulation.py  survey.py
scripts/: backup_falkordb.ps1  backup_falkordb.sh  restart.ps1  start.ps1  stop.ps1  test_zep_auth.py  wipe_phase10.ps1
test_data/: shopee_blackfriday_2026.md
(+56 files in other folders)
